build/log/idf_py_stderr_output_29170
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:10:9: note: '#pragma message: oled128x64.c is compiling...'
   10 | #pragma message("oled128x64.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledResetView':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:132:46: warning: passing argument 2 of 'i2cSetTransmitBuffer' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  132 |     ret = i2cSetTransmitBuffer(oled->i2cDev, cmds, sizeof(cmds));
      |                                              ^~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64Definitions.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:6:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:62:49: note: expected 'void *' but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
   62 | def i2cSetTransmitBuffer(i2cDev_t * dev, void * txdPtr, size_t size);
      |                                          ~~~~~~~^~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/do-an-02.c:2:
/home/fus/Documents/DO-AN-02/main/sender.h: In function 'oledTask':
/home/fus/Documents/DO-AN-02/main/sender.h:112:10: warning: unused variable 'c' [-Wunused-variable]
  112 |     char c[] = "--> 0";
      |          ^
In file included from /home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/oled128x64.h:4,
                 from /home/fus/Documents/DO-AN-02/main/sender.h:4:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/sender.h:3:
/home/fus/Documents/DO-AN-02/main/../comDriver/spi/spi.h:195:23: warning: 'spiHandleCSIsr' defined but not used [-Wunused-function]
  195 | static void IRAM_ATTR spiHandleCSIsr(void* pv) {
      |                       ^~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/spi/spi.h:124:23: warning: 'spiHandleCLKIsr' defined but not used [-Wunused-function]
  124 | static void IRAM_ATTR spiHandleCLKIsr(void* pv) {
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c: In function 'app_main':
/home/fus/Documents/DO-AN-02/main/do-an-02.c:80:53: error: 'snprintf' output truncated before the last format character [-Werror=format-truncation=]
   80 |                 snprintf(content, 15, "M: %s\n>>> %c", "1-WIRE", byteData);
      |                                                     ^
/home/fus/Documents/DO-AN-02/main/do-an-02.c:80:17: note: 'snprintf' output 16 bytes into a destination of size 15
   80 |                 snprintf(content, 15, "M: %s\n>>> %c", "1-WIRE", byteData);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/do-an-02.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7426: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
